tests/macros/unknown/option.stderr
error: unknown question option `unknown`
 --> $DIR/option.rs:2:43
  |
2 |     let q = discourse::questions![Input { unknown: 0 }];
  |                                           ^^^^^^^
