tests/macros/unknown/option.rs
fn main() {
    let q = discourse::questions![Input { unknown: 0 }];
}
